--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
    />
 
    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 </head>
 
 <body>
